# bevy_streaming_example

./: Cargo.toml  README.md  index.html  web-build.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  release.yaml
LICENSES/: Apache-2.0.txt  MIT.txt
assets/client_assets/kenney-hexagon-kit/: Overview.html
assets/kenney-hexagon-kit/: Overview.html
game_client/: Cargo.toml
game_client/src/: main.rs
game_server_logic/: Cargo.toml
game_server_logic/src/: lib.rs
