[package]
name = "game_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
bevy_ggrs = { workspace = true }
bevy_matchbox = { version = "0.9", features = ["ggrs"] }
game_server_logic = { path = "../game_server_logic" }
bevy_mod_picking = "0.18"
bevy_eventlistener = "0.7"